--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,17 @@
+@font-face {
+    font-family: 'Pixelify Sans';
+    src: url('/assets/font/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     margin: 0;
     padding: 0;
     color: rgba(255, 255, 255, 0.87);
     background-color: #000000;
+    font-family: 'Pixelify Sans', sans-serif;
 }
 
 #app {
